--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,9 +5,12 @@ import Card from '../components/Card.astro';
 
 <Layout title="Demi Website">
 	<main>
-		<h1>Welcome to my website </h1>
-        <p> Content will be added soon </p>
-</main>
+        <Card href="" title="Socials" body=" This is link to my Socials" />
+        <Card href="" title="Blog" body=" This is link to all of the programming concepts I have learned" />
+        <Card href="" title="University" body="What I have done in eahc year  of unversity and what I have leaned" />
+        <Card href="" title="Editing" body="This is my editing page" />
+        <Card href="" title="Payhip" body="Link to my Payhip store"  />
+    </main>
 </Layout>
 
 <style>
