--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -4,6 +4,9 @@ export interface Props {
 }
 
 const { title } = Astro.props;
+
+import Footer from '../components/Footer.astro';
+import Header from '../components/Header.astro';
 ---
 
 <!DOCTYPE html>
@@ -16,7 +19,9 @@ const { title } = Astro.props;
 		<title>{title}</title>
 	</head>
 	<body>
+		<Header></Header>
 		<slot />
+		<Footer></Footer>
 	</body>
 </html>
 <style is:global>
