--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -3,23 +3,13 @@ import { Image } from "@astrojs/image/components";
 import Theme from './Theme'
 ---
 
-<nav class = "hidden md:flex justify-between items-center mb-8"> 
+<nav class = "hidden md:flex justify-between items-center mb-4"> 
     <div class="ml-12">
-    <a href="/">
-            
-            <!-- <Image
-                src={`favicon.svg`}
-                width={120}
-                height={120}
-                alt="Main"
-        /> -->
-        
-    </a>
+        <h2> <a href="/">Demi Aina</a></h2>
     </div>
-    <div class ="flex gap-3 mr-12 my-20">
-        <h2>Demi Aina</h2>
-       <h1> <span> > </span></h1>
-    <a href="https://github.com/DemiAina">Github</a>
+    <div class ="flex gap-3 mr-12 my-10">
+       <h1 class = "m-2"> <span> > </span></h1>
+    <a class = "m-2" href="https://github.com/DemiAina">Github</a>
     <Theme client:load/>
     </div>
 </nav>
