--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,16 +7,15 @@ import Mainfunction from '../components/Mainfunction.jsx';
 <Layout title="Demi Website">
 	
 	<Mainfunction client:load />
-	
-	<!-- <main>
+		<main class="absolute grid grid-cols-1 top-0 left-0 bottom-0 right-0 mr-auto h-[80vh]">
         <Card href="" title="Socials" body=" This is link to my Socials" />
         <Card href="" title="Blog" body=" This is link to all of the programming concepts I have learned" />
         <Card href="" title="University" body="What I have done in eahc year  of unversity and what I have leaned" />
         <Card href="" title="Editing" body="This is my editing page" />
         <Card href="" title="Payhip" body="Link to my Payhip store"  />
-    </main> -->
-<p class = "text-center" >Content will be added soon</p>
+		<p class = "text-center" >Content will be added soon</p>
     <!-- TODO: Fix the styles tmrw -->
+	</main>
 </Layout>
 
 <style>
@@ -24,6 +23,7 @@ import Mainfunction from '../components/Mainfunction.jsx';
 		margin: auto;
 		padding: 1.5rem;
 		max-width: 60ch;
+		grid-template: repeat(12, 1fr);
 	}
 	h1 {
 		font-size: 3rem;
