--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -2,13 +2,14 @@
 export interface Props {
 	title: string;
 	body: string;
-	href: string;
+	href?: string;
 }
 
 const { href, title, body } = Astro.props;
 ---
 
 <li class="link-card">
+
 	<a href={href}>
 		<h2>
 			{title}
