Chore: Cleaned up styles: Feat: Added indexm pages for parts of the website

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,1 +1,1 @@
-<footer class = "mb-10 mt-10 text-center"><small> Copyright &copy; <span  id = "copyright">Demi Aina</span> | All right reversed </small></footer>
+<footer class = "mb-10 mt-10 text-center text-grey"><small> Copyright &copy; <span  id = "copyright">Demi Aina</span> | All right reversed </small></footer>
