--- a/public/styles.css
+++ b/public/styles.css
@@ -1,28 +1,26 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 * {
   margin: 0;
   padding: 0;
   border: 0;
   box-sizing: border-box;
 }
-body {
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
-  background-color: #0b0c12;
-}
-:root {
-  --accent: 124, 58, 237;
-  --accent-gradient: linear-gradient(
-    45deg,
-    rgb(var(--accent)),
-    #da62c4 30%,
-    white 60%
-  );
-}
+
 html {
   font-family: system-ui, sans-serif;
   background-color: #f6f6f6;
 }
+
+body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+
 code {
   font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
     Bitstream Vera Sans Mono, Courier New, monospace;
@@ -38,15 +36,9 @@ h1 {
   font-weight: 800;
   margin: 0;
 }
-/* li p {
-    color: #FBE094;
-} */
-li h2 {
-  color: #fbe094;
-}
 li {
   list-style-type: none;
-  border: 2px solid rgba(var(--accent), 25%);
+  border: 2px solid gray;
   border-radius: 1.5rem;
   margin: 2rem;
   padding: 1rem;
