--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -5,7 +5,7 @@ import Theme from './Theme'
 
 <nav class = "hidden md:flex justify-between items-center mb-4"> 
     <div class="ml-12">
-        <h2> <a href="/">Demi Aina</a></h2>
+        <h2> <a class = "text-light-blue" href="/">Demi Aina</a></h2>
     </div>
     <div class ="flex gap-3 mr-12 my-10">
        <h1 class = "m-2"> <span> > </span></h1>
