--- a/src/pages/editing/index.astro
+++ b/src/pages/editing/index.astro
@@ -2,6 +2,6 @@
 import Layout from '../../layouts/Layout.astro'
 ---
 
-<Layout>
+<Layout title = "Editing page">
    <p>Hi from editing</p>
 </Layout>
