--- a/src/pages/university/index.astro
+++ b/src/pages/university/index.astro
@@ -2,6 +2,6 @@
 import Layout from '../../layouts/Layout.astro'
 ---
 
-<Layout>
+<Layout title="University courses">
    <p>Hi from University</p>
 </Layout>
