--- a/public/styles.css
+++ b/public/styles.css
@@ -18,8 +18,8 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  
 }
-
 
 code {
   font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
@@ -36,6 +36,11 @@ h1 {
   font-weight: 800;
   margin: 0;
 }
+
+ul li{
+  flex: 1;
+}
+
 li {
   list-style-type: none;
   border: 2px solid gray;
