--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,25 +10,25 @@ import { Image } from "@astrojs/image/components";
   <main class="">
     <ul class="grid text-center mt-4 mb-4 md:flex content-center flex-wrap align-middle gap-2">
       <li class="flex-1">
-        <a href={"./Socials"}>
+        <a href={"./art/Socials"}>
           <h2>Socials</h2>
           <p>Socials</p>
         </a>
       </li>
       <li class="flex-grow">
-        <a href={`./blog`}>
+        <a href={`./dev/blog`}>
           <h2>Blog</h2>
           <p>Programming concepts explained</p>
         </a>
       </li>
       <li>
-        <a href={"./university"}>
+        <a href={"./dev/university"}>
           <h2>University</h2>
           <p>Modules and what I learned</p>
         </a>
       </li>
       <li class="flex-1">
-        <a href={`/editing`}>
+        <a href={`./art/editing`}>
           <h2>Editing</h2>
           <p>Page</p>
         </a>
