--- a/src/pages/dev/blog/category/[category].astro
+++ b/src/pages/dev/blog/category/[category].astro
@@ -1,6 +1,6 @@
 ---
-import MainLayout from "../../../layouts/Layout.astro";
-import BlogPost from "../../../components/BlogPost.astro";
+import MainLayout from "../../../../layouts/Layout.astro";
+import BlogPost from "../../../../components/BlogPost.astro";
 import { getCollection } from "astro:content";
 
 const { category } = Astro.params;
