--- a/src/pages/dev/blog/category/index.astro
+++ b/src/pages/dev/blog/category/index.astro
@@ -1,6 +1,6 @@
 ---
 import { getCollection } from "astro:content";
-import MainLayout from "../../../layouts/Layout.astro";
+import MainLayout from "../../../../layouts/Layout.astro";
 const allPosts = await getCollection("blog");
 
 const Categories = [...new Set(allPosts.map((post) => post.data.Categories).flat())];
