--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,35 +10,15 @@ import { Image } from "@astrojs/image/components";
   <main class="">
     <ul class="grid text-center mt-4 mb-4 md:flex content-center flex-wrap align-middle gap-2">
       <li class="flex-1">
-        <a href={"./art/Socials"}>
-          <h2>Socials</h2>
-          <p>Socials</p>
-        </a>
-      </li>
-      <li class="flex-grow">
-        <a href={`./dev/blog`}>
-          <h2>Blog</h2>
-          <p>Programming concepts explained</p>
-        </a>
-      </li>
-      <li>
-        <a href={"./dev/university"}>
-          <h2>University</h2>
-          <p>Modules and what I learned</p>
+        <a href={"./art"}>
+          <h2>Personal</h2>
         </a>
       </li>
       <li class="flex-1">
-        <a href={`./art/editing`}>
-          <h2>Editing</h2>
-          <p>Page</p>
+        <a href={"./dev"}>
+          <h2>Developer</h2>
         </a>
       </li>
-      <li class="flex-1">
-        <a href="https://payhip.com/6Demii6">
-          <h2>Payhip</h2>
-          <p>Payhip store</p>
-        </a>
-      </li>
-    </ul>
+      </ul>
   </main>
 </Layout>
