--- a/src/pages/dev/index.astro
+++ b/src/pages/dev/index.astro
@@ -11,13 +11,13 @@ import { Image } from "@astrojs/image/components";
   <main class="">
     <ul class="grid text-center mt-4 mb-4 md:flex content-center flex-wrap align-middle gap-2">
       <li class="flex-grow">
-        <a href={`./dev/blog`}>
+        <a href={`/dev/blog`}>
           <h2>Blog</h2>
           <p>Programming concepts explained</p>
         </a>
       </li>
       <li>
-        <a href={"./dev/university"}>
+        <a href={"/dev/university"}>
           <h2>University</h2>
           <p>Modules and what I learned</p>
         </a>
