--- a/src/pages/art/index.astro
+++ b/src/pages/art/index.astro
@@ -11,25 +11,25 @@ import { Image } from "@astrojs/image/components";
   <main class="">
     <ul class="grid text-center mt-4 mb-4 md:flex content-center flex-wrap align-middle gap-2">
       <li class="flex-1">
-        <a href={"./art/Socials"}>
+        <a href={"/art/Socials"}>
           <h2>Socials</h2>
           <p>Socials</p>
         </a>
       </li>
       <li class="flex-1">
-        <a href={`./art/editing`}>
+        <a href={`/art/editing`}>
           <h2>Editing</h2>
           <p>Page</p>
         </a>
       </li>
       <li class="flex-1">
-        <a href={`./art/editing`}>
+        <a href={`/art/editing`}>
           <h2>Perosnal Blog</h2>
           <p>Everything I like</p>
         </a>
       </li>
       <li class="flex-1">
-        <a href={`./art/editing`}>
+        <a href={`/art/editing`}>
           <h2>Editing Blog</h2>
           <p>Blog about editing</p>
         </a>
