--- a/src/pages/dev/blog/category/index.astro
+++ b/src/pages/dev/blog/category/index.astro
@@ -8,7 +8,7 @@ const Categories = [...new Set(allPosts.map((post) => post.data.Categories).flat
 <MainLayout title="Index page">
     <div>
         {
-            Categories.map((category) => <p><a href={`./category/${category}`}>{category}</a></p>)
+            Categories.map((category) => <p><a href={`./${category}`}>{category}</a></p>)
         }
     </div>
 </MainLayout>
