--- a/src/pages/dev/blog/tag/index.astro
+++ b/src/pages/dev/blog/tag/index.astro
@@ -8,7 +8,7 @@ const tags = [...new Set(allPosts.map((post) => post.data.tags).flat())];
 <MainLayout title = "tag page">
     <div>
         {
-            tags.map((tag) => <p><a href={`/tag/${tag}`}>{tag}</a></p>)
+            tags.map((tag) => <p><a href={`./${tag}`}>{tag}</a></p>)
         }
     </div>
 </MainLayout>
