Added two different headers for peronsal and developer

--- a/src/pages/dev/index.astro
+++ b/src/pages/dev/index.astro
@@ -9,7 +9,7 @@ import { Image } from "@astrojs/image/components";
 <Layout title="Demi Website">
   <!-- <Mainfunction client:load /> -->
   <main class="">
-    <ul class="grid text-center mt-4 mb-4 md:flex content-center flex-wrap align-middle gap-2">
+    <ul class="grid text-center mt-4 mb-4 md:flex content-center flex-wrap align-middle gap-2 weblinks">
       <li class="flex-grow">
         <a href={`./dev/blog`}>
           <h2>Blog</h2>
