--- a/src/pages/dev/university/Year1/index.astro
+++ b/src/pages/dev/university/Year1/index.astro
@@ -5,15 +5,18 @@ import Layout from "../../../../layouts/Layout.astro";
 
 
 <Layout title="Year 1">
-<section class="w-full h-[100vh] ">    <p>Algorithm and design and problem</p></section>
-<section class="w-full h-[100vh]">    <p>Communications for computer technology</p></section>
-<section class="w-full h-[100vh]">    <p>Computer Architecture and technology</p></section>
-<section class="w-full h-[100vh]">    <p>Information technology fundamentals</p></section>
-<section class="w-full h-[100vh]">    <p>Maths 1</p></section>
-<section class="w-full h-[100vh]">    <p>Microprocessor Systems</p></section>
-<section class="w-full h-[100vh]">    <p>Operating Systems</p></section>
-<section class="w-full h-[100vh]">    <p>Program design</p></section>
-<section class="w-full h-[100vh]">    <p>Programming</p></section>
-<section class="w-full h-[100vh]">    <p>Web development</p></section>
-<section class="w-full h-[100vh]">    <p>Data Exploration</p></section>
+    <section class="w-full h-[100vh]">
+        <p>Algorithm and design and problem</p>
+        <p>This talks about the how algorithms are created and the steps needed to create a program. This just teachs you that the way to program to </p>
+    </section>
+    <section class="w-full h-[100vh]"><p>Communications for computer technology</p></section>
+    <section class="w-full h-[100vh]"><p>Computer Architecture and technology</p></section>
+    <section class="w-full h-[100vh]"><p>Information technology fundamentals</p></section>
+    <section class="w-full h-[100vh]"><p>Maths 1</p></section>
+    <section class="w-full h-[100vh]"><p>Microprocessor Systems</p></section>
+    <section class="w-full h-[100vh]"><p>Operating Systems</p></section>
+    <section class="w-full h-[100vh]"><p>Program design</p></section>
+    <section class="w-full h-[100vh]"><p>Programming</p></section>
+    <section class="w-full h-[100vh]"><p>Web development</p></section>
+    <section class="w-full h-[100vh]"><p>Data Exploration</p></section>
 </Layout>
