--- a/src/pages/dev/university/index.astro
+++ b/src/pages/dev/university/index.astro
@@ -4,7 +4,7 @@ import Layout from '../../../layouts/Layout.astro'
 
 <Layout title="University courses">
    <main class="">
-    <ul class="grid text-center mt-4 mb-4 md:flex content-center flex-wrap align-middle gap-2">
+    <ul class="grid text-center mt-4 mb-4 md:flex content-center flex-wrap align-middle gap-2 weblinks">
       <li class="flex-1">
         <a href={"/dev/university/Year1"}>
           <h2>Year 1</h2>
