--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import { Image } from "@astrojs/image/components";
 <Layout title="Demi Website">
   <!-- <Mainfunction client:load /> -->
   <main class="">
-    <ul class="grid text-center mt-4 mb-4 md:flex content-center flex-wrap align-middle gap-2">
+    <ul class="grid text-center mt-4 mb-4 md:flex content-center flex-wrap align-middle gap-2 weblinks">
       <li class="flex-1">
         <a href={"./art"}>
           <h2>Personal</h2>
