Changes: Added the weblinks class to show what was previously there

--- a/src/pages/art/Socials/index.astro
+++ b/src/pages/art/Socials/index.astro
@@ -8,7 +8,7 @@ import {BsSpotify} from "react-icons/bs/index.js";
    <div class=" flex justify-center my-2 ">
    <img class = "my-2 rounded-full" src="/ProfilePic.jpg" alt="">
    </div>
-  <ul class="grid text-center gap-2 content-center my-12">
+  <ul class="grid text-center gap-2 content-center my-12 weblinks">
     <li>
       <a href="https://www.instagram.com/"> <IoLogoInstagram className="inline-flex mx-2" /> instagram</a>
     </li>
