--- a/src/pages/dev/university/Year2/index.astro
+++ b/src/pages/dev/university/Year2/index.astro
@@ -5,15 +5,12 @@ import Layout from "../../../../layouts/Layout.astro";
 
 
 <Layout title="Year 2">
-    <p>Algorithms and data structure</p>
-    <p>Data communications</p>
-    <p>Databases 1</p>
-    <p>Human computer interaction</p>
-    <p>Maths 2</p>
-    <p>Legal and Professional</p>
-    <p>Operating Systems 2</p>
-    <p>Software enginnering 1</p>
-    <p>Software enginnering 2</p>
-    <p>Web development 2</p>
-    <p>Object oriented programming</p>
+<section class ="w-full h-[100vh]"><p>Algorithms and data structure</p></section>   
+<section class ="w-full h-[100vh]"><p>Data communications</p></section>   
+<section class ="w-full h-[100vh]"><p>Human computer interaction</p></section>   
+<section class ="w-full h-[100vh]"><p>Operating system 2</p></section>   
+<section class ="w-full h-[100vh]"><p>software enginnering 1</p></section>   
+<section class ="w-full h-[100vh]"><p>software enginnering 2</p></section>   
+<section class ="w-full h-[100vh]"><p>Web development</p></section>   
+<section class ="w-full h-[100vh]"><p>Object oriented programming</p></section>   
 </Layout>
