--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,1 +1,1 @@
-<footer class = "py-10 mt-auto text-center text-darkMode-grey"><small> Copyright &copy; <span  id = "copyright">Demi Aina</span> | All right reversed </small></footer>
+<footer class = "pb-10 mt-auto text-center text-darkMode-grey"><small> Copyright &copy; <span  id = "copyright">Demi Aina</span> | All right reversed </small></footer>
