--- a/src/layouts/BlogLayout.astro
+++ b/src/layouts/BlogLayout.astro
@@ -1,4 +1,5 @@
 ---
+import Footer from "../components/Footer.astro";
 import MainLayout from "./Layout.astro";
 
 const { frontmatter } = Astro.props
@@ -26,10 +27,10 @@ import {Image} from '@astrojs/image/components'
         alt={image.alt} />
         </div>
     </header>
-    <div class="post-content">
+    <div class="post-content pb-5">
         <div class="content mx-auto prose dark:text-white md:max-w-7xl w-10/12 ">
             <slot></slot>
+            <!-- TODO: Need to make a fix to show the footer on mobile later -->
         </div>
     </div>
-    
 </MainLayout>
