--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -7,6 +7,7 @@ const { title } = Astro.props;
 
 import Footer from '../components/Footer.astro';
 import Header from '../components/Header.astro';
+import MobileNav from '../components/MobileNav.astro';
 ---
 
 <!DOCTYPE html>
@@ -22,6 +23,7 @@ import Header from '../components/Header.astro';
 	<body class ="[&::-webkit-scrollbar]:hidden [-ms-overflow-style:'none'] [scrollbar-width:'none'] bg-lightMode-background text-lightMode-text dark:bg-darkMode-black dark:text-darkMode-blue">
 		<Header></Header>
 		<slot />
+        <MobileNav />
 		<Footer></Footer>
 	</body>
 </html>
