--- a/public/styles.css
+++ b/public/styles.css
@@ -8,3 +8,13 @@
   border: 0;
   box-sizing: border-box;
 }
+
+img, picture, svg , video{
+    display: block;
+    max-width: 100%;
+}
+
+
+body{
+    min-height: 100vh;
+}
