--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,19 +6,31 @@ import { Image } from "@astrojs/image/components";
 ---
 
 <Layout title="Demi Website">
-  <!-- <Mainfunction client:load /> -->
-  <main class="">
     <ul class="grid text-center mt-4 mb-4 md:flex content-center flex-wrap align-middle gap-2 weblinks">
-      <li class="flex-1">
-        <a href={"./art"}>
-          <h2>Personal</h2>
-        </a>
-      </li>
-      <li class="flex-1">
-        <a href={"./dev"}>
-          <h2>Developer</h2>
-        </a>
-      </li>
+      <article class="dev flex-1">
+        <section>
+            <h2>Artist</h2>
+            <p>Here is where you can see my works to do with 3D and editing</p>
+            <a href={"./art"}>
+                click here to learn more
+            </a>
+        </section>
+      </article>
+      <article class="dev flex-1">
+        <section>
+            <h2>Developer</h2>
+            <p>Here is where you can see everything I have done as developer and technical blog</p>
+            <a href={"./dev"}>
+                click here to learn more
+            </a>
+        </section>
+      </article>
       </ul>
-  </main>
+    <style>
+        .dev{
+            background-image: url("/DevImage.jpg");
+            background-size: cover;
+        }
+    </style>
 </Layout>
+
