--- a/src/pages/[...page].astro
+++ b/src/pages/[...page].astro
@@ -52,7 +52,7 @@ const getPageUrl = (page: number) => {
     <div
       class="max-w-[1100px] px-4 md:px-8 py-20 mx-auto grid lg:grid-cols-[auto_300px] items-start gap-10"
     >
-      <SectionBlock title="最新发布">
+      <SectionBlock title="LATEST RELEASES">
         <PostList posts={data} />
         {
           totalPage > 1 && (
@@ -61,10 +61,10 @@ const getPageUrl = (page: number) => {
         }
       </SectionBlock>
       <aside class="md:sticky md:top-20 space-y-10">
-        <SectionBlock title="分类">
+        <SectionBlock title="CLASSIFICATION">
           <CategoryList categories={allCategories} />
         </SectionBlock>
-        <SectionBlock title="热门标签">
+        <SectionBlock title="POPULAR TAGS">
           <TagList tags={hotTags} />
           {
             allTags.length > hotTags.length && (
